[package]
name = "minhook"
description = "A function hooking library for the Rust programming language"
version = "0.1.0"
authors = ["Jascha Neutelings"]
repository = "https://github.com/Jascha-N/minhook-rs"
license = "BSD-2-Clause"
readme = "README.md"
links = "MinHook"
build = "build.rs"
edition = "2018"

[dependencies]
libc = "0.2.82"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }

[dependencies.winapi]
version = "0.3.9"
features = [
    "ntdef",
    "minwindef",
    "winnls",
    "stringapiset",
    "winbase"
]

[build-dependencies]
cc = "1.0.66"

[features]
increased_arity = []